webpack5 예제로 바꿈

--- a/11-08/ex02/package.json
+++ b/11-08/ex02/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.mjs",
+    "debug": "node server.mjs",
     "build": "npx webpack"
   },
   "keywords": [],
