--- a/11-08/ex04/package.json
+++ b/11-08/ex04/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "npx webpack serve --progress",
+    "debug": "npx webpack serve --progress",
     "build": "npx webpack"
   },
   "keywords": [],
